force-app/main/default/objects/echosign_dev1__SIGN_Merge_Mapping__c/echosign_dev1__SIGN_Merge_Mapping__c.object-meta.xml
<CustomObject>
    <customHelpPage>echosign_dev1__EchosignHelp</customHelpPage>
    <label>Merge Mapping</label>
    <nameField>
        <label>Merge Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>