force-app/main/default/objects/echosign_dev1__SIGN_Merge_Mapping__c/listViews/echosign_dev1__All.listView-meta.xml
<ListView>
    <fullName>echosign_dev1__All</fullName>
    <columns>NAME</columns>
    <columns>echosign_dev1__Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>